[package]
name = "ecvrf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/ecvrf.rs"

[dependencies]
hacspec-lib = { path = "../../hacspec/lib" }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
