[package]
name = "nohacspec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/nohacspec.rs"

[dependencies.creusot-contracts]
git = "https://github.com/xldenis/creusot/"
branch = "bigint"
package = "creusot-contracts"

[features]
contracts = []

