[package]
name = "rsa-fdh-vrf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/rsa-fdh-vrf.rs"

[dependencies]
hacspec-lib = { path = "../../hacspec/lib" }
hacspec-sha256 = { path = "../../hacspec/examples/sha256" }
rsa = { path = "../rsa"}

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
glass_pumpkin = "1.0"
num-bigint="0.4.3"